disk_cache_test_base: permit injecting ScopedTaskEnvironment

... rather than assuming that NetTestSuite exists, which it doesn't
in net_perftests, which use PerfTestSuite instead.

Bug: 780616
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I858c7257f75411efcea39d9e03d72b0159ac679b
Reviewed-on: https://chromium-review.googlesource.com/750389
Reviewed-by: Helen Li <xunjieli@chromium.org>
Commit-Queue: Maks Orlovich <morlovich@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513507}
Former-commit-id: 369c8f14d70b1772b1d5e9b50cf012eb09d54016