net/disk_cache/disk_cache_test_base.cc
@@ -76,6 +76,10 @@ int DiskCacheTestWithCache::TestIterator::OpenNextEntry(
 }
 
 DiskCacheTestWithCache::DiskCacheTestWithCache()
+    : DiskCacheTestWithCache(NetTestSuite::GetScopedTaskEnvironment()) {}
+
+DiskCacheTestWithCache::DiskCacheTestWithCache(
+    base::test::ScopedTaskEnvironment* scoped_task_env)
     : cache_impl_(NULL),
       simple_cache_impl_(NULL),
       mem_cache_(NULL),
@@ -89,7 +93,8 @@ DiskCacheTestWithCache::DiskCacheTestWithCache()
       new_eviction_(false),
       first_cleanup_(true),
       integrity_(true),
-      use_current_thread_(false) {}
+      use_current_thread_(false),
+      scoped_task_env_(scoped_task_env) {}
 
 DiskCacheTestWithCache::~DiskCacheTestWithCache() {}
 
@@ -279,17 +284,21 @@ void DiskCacheTestWithCache::AddDelay() {
 }
 
 void DiskCacheTestWithCache::TearDown() {
-  NetTestSuite::GetScopedTaskEnvironment()->RunUntilIdle();
+  scoped_task_env_->RunUntilIdle();
   cache_.reset();
 
   if (!memory_only_ && !simple_cache_mode_ && integrity_) {
     EXPECT_TRUE(CheckCacheIntegrity(cache_path_, new_eviction_, mask_));
   }
-  NetTestSuite::GetScopedTaskEnvironment()->RunUntilIdle();
+  scoped_task_env_->RunUntilIdle();
   if (simple_cache_mode_ && simple_file_tracker_)
     EXPECT_TRUE(simple_file_tracker_->IsEmptyForTesting());
 
   DiskCacheTest::TearDown();
+
+  // We are documented as not keeping this past TearDown, and net_perftests
+  // is written under this assumption.
+  scoped_task_env_ = nullptr;
 }
 
 void DiskCacheTestWithCache::InitMemoryCache() {
